fix(client): prevent horizontal scroll on superblock intro page

--- a/client/src/components/layouts/global.css
+++ b/client/src/components/layouts/global.css
@@ -65,6 +65,7 @@ rt {
   flex-direction: column;
   min-height: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 
 .page-wrapper-80 {
